# menus-app

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  app.py  menu_dia.day.menu.json  pyproject.toml  requirements.txt
data_defaults/: alergenos.json  alimentos.json  allergens.json  categorias.json  categories.json  foods.json  reglas.json  rules.json
src/: main_window.py  theme.py
src/core/: config.py  export_qt.py  i18n.py  models.py  repository.py  rules_engine.py
src/ui/: __init__.py  allergens_editor.ui  categories_editor.ui  day_editor.ui  db_editor.ui  food_dialog.ui  main_window.ui  preferences.ui  rules_editor.ui  week_planner.ui
src/widgets/: allergens_editor.py  categories_editor.py  day_editor.py  db_editor.py  food_dialog.py  food_table_model.py  preferences.py  print_views.py  rules_editor.py  week_planner.py
tests/: conf_test.py  test_repo.py  test_rules_engine.py
