[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
force-exclude = '''
/(
    \.venv
  | build
  | dist
)/
'''


[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
pythonpath = ["src"]

[project]
name = "menus-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["pyside6", "pydantic"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]